# docs/swagger.json
@@ -103,6 +103,24 @@
                 "responses": {}
             }
         },
+        "/admin/users": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Admins can view all registered users",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "Get all users",
+                "responses": {}
+            }
+        },
         "/admin/users/{id}/role": {
             "post": {
                 "security": [
